# WaterLevelAI

./: README.md  pyproject.toml
research/: data.xlsx  scaler.joblib  test_model.ipynb
research/history_learning/river_level_prediction/: oracle.json
research/history_learning/river_level_prediction/trial_00/: checkpoint.weights.h5  trial.json
research/history_learning/river_level_prediction/trial_01/: trial.json
research/history_learning/river_level_prediction/trial_02/: trial.json
research/history_learning/river_level_prediction/trial_03/: trial.json
research/history_learning/river_level_prediction/trial_04/: checkpoint.weights.h5  trial.json
research/history_learning/river_level_prediction/trial_05/: trial.json
research/history_learning/river_level_prediction/trial_06/: trial.json
research/history_learning/river_level_prediction/trial_07/: trial.json
research/history_learning/river_level_prediction/trial_08/: trial.json
research/history_learning/river_level_prediction/trial_09/: trial.json
research/history_learning/river_level_prediction/trial_10/: checkpoint.weights.h5  trial.json
research/history_learning/river_level_prediction/trial_11/: trial.json
research/history_learning/river_level_prediction/trial_12/: trial.json
research/history_learning/river_level_prediction/trial_13/: checkpoint.weights.h5  trial.json
research/history_learning/river_level_prediction/trial_14/: trial.json
waterlevel/: main.py  mainwindow.py  mainwindow.ui  mainwindow.ui.autosave  ui_form.py
(+43 files in other folders)
