[tool.poetry]
name = "waterlevel"
version = "0.1.0"
description = ""
authors = ["Akmal <hanzomainer1488@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
